lang/examples/good/01_trzy_typy.gt
fn main() -> int {
    var a : int;
    var b : bool;
    var c : char;
    var d : [char];
    var e : void;

    return 0;
}
