lang/examples/bad/NotAnArray.gt
fn main() -> int {
    var x = 1;
    x[0];
    return 0;
}
